@@ -67,6 +67,8 @@ dbg_lvl]
 [\-\-hdr_pad
 .IR sz_byt ]
 [\-\-hpss_try]
+[\-\-hrz_s1d
+.IR hrz.nc ]
 [\-\-json]
 [\-\-jsn_fmt
 .IR lvl ] 
@@ -108,6 +110,7 @@ dbg_lvl]
 .IR wgt ]
 [\-s 
 .IR format ]
+[\-\-s1d]
 [\-t
 .IR thr_nbr ]
 [\-u]
